# timer

./: Cargo.toml  LICENSE  README.md
examples/: bottleneck.rs  on_function.rs  usage.rs
src/: lib.rs  macros.rs
timer_macro/: Cargo.toml
timer_macro/src/: lib.rs
