[package]
name = "timer"
version = "1.0.3"
edition = "2021"
authors = ["ponurakk <p0unrakg@int.pl>"]
description = "Simple timing utility with minimal overhead"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ponurakk/timer"

[dependencies]
colored = "2.1.0"
concat-string = "1.0.1"
log = "0.4.22"
timer_macro = { path = "./timer_macro" }

[dev-dependencies]
env_logger = "0.11.3"
